--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ p {
 
 /* Header */
 
+.page-header {
+   border-bottom: 1px solid #ECECEC;
+   
+}
+
  /* Container Header */
 
  .container {
@@ -49,7 +54,6 @@ p {
     padding-right: 15px;
     padding-left: 15px;
     margin: 0 auto;
-    outline: 2px solid tomato;
 
  }
 
@@ -302,6 +306,13 @@ margin-left: 30px;
 
 /* Portfolio */
 
+.filters.list {
+   display: flex;
+   justify-content: center;
+   margin-bottom: 50px;
+
+}
+
 .filters .filter {
   
   font-family: inherit;
@@ -310,6 +321,10 @@ margin-left: 30px;
   line-height: 1.62;
   color: var(--primary-text-color);
   background-color: #F5F4FA;
+}
+
+.filters.list .item + .item {
+   margin-left: 8px;
 }
 
 .filters .filter:hover,
@@ -327,15 +342,46 @@ margin-left: 30px;
    cursor: pointer;
 }
 
+/* Our works */
+
+.works.list {
+   display: flex;
+   flex-wrap: wrap;
+
+}
+
+.works.list .item {
+   width: 370px;
+   margin-right: 30px;
+   margin-bottom: 30px;
+   padding-bottom: 20px;
+
+}
+
+.works.list .item:nth-child(3n) {
+   margin-right: 0;
+}
+
+.works.list .item:nth-last-child(-n + 3) {
+   margin-bottom: 0;
+}
+
+.work-card .card-image {
+   margin-bottom: 20px;
+}
+
 .work-title {
-   
+   margin-bottom: 4px;
+   margin-left: 24px;
+
    font-size: 18px;
    line-height: 2;
    color: var(--primary-text-color);
    letter-spacing: 0.06em;
 }
 
-.work-type {
+.type {
+   margin-left: 24px;
    font-size: 16px;
    line-height: 1.88;
 }
@@ -344,20 +390,26 @@ margin-left: 30px;
 
 .footer {
    padding-top: 60px;
+   padding-bottom: 60px;
    line-height: 1.71;
    background: #2F303A;
   
 }
 
 .logo.secondary {
-  margin-bottom: 10px;
+  display: block;
+  margin-bottom: 20px;
    
 }
 
 .address {
-   
+
    font-style: normal; 
    color: #FFFFFF;
+}
+
+.contacts-footer .item {
+   margin-top: 9px;
 }
 
 .contact-down {
@@ -367,7 +419,7 @@ margin-left: 30px;
    text-decoration: none;
 }
 
-.contacts .contact-down:hover,
-.contacts .contact-down:focus {
+.contacts-footer .contact-down:hover,
+.contacts-footer .contact-down:focus {
    color: var(--accent-color);
 }
