--- a/css/styles.css
+++ b/css/styles.css
@@ -251,7 +251,8 @@ p {
    text-transform: uppercase;
 }
 
-.feature-description {
+.description {
+   width: 270px;
    line-height: 1.71;
 
 }
@@ -314,6 +315,8 @@ margin-left: 30px;
 }
 
 .filters .filter {
+   min-width: 73px;
+   padding: 6px 22px;
   
   font-family: inherit;
   font-weight: 500;
